# Fiat_matrix

./: #Matrix.v#  #formula.v#  .#Matrix.v  .#formula.v  .CSR.vo.aux  .DenseMatrix.vo.aux  .SparseMatrix.vo.aux  .ZElem.vo.aux  .dir-locals.el  .formula.vo.aux  .gitignore  .matrix.vo.aux  AlphaBeta.v  CSR.v  DenseMatrix.glob  DenseMatrix.v  DenseMatrix.vo  DenseMatrixOpt.v  DenseMatrix_1d.v  FiatHelpers.v  Kalman.v  KalmanAxioms.ml  KalmanExtraction.v  KalmanExtractionHaskell.v  LICENSE  ListHelpers.v  Makefile  Makefile.coq  Matrix.glob  Matrix.v  Matrix.vo  MatrixInversion.v  MatrixLemmas.v  MyHelpers.v  Perceptron.v  SparseMatrix.glob  SparseMatrix.v  SparseMatrix.vo  ZElem.v  _CoqProject  (+9 more)
haskell/: KalmanAxioms.hs  README.md  kalman.cabal
