name:                kalman
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library 
  exposed-modules:     KalmanAxioms,
                       Kalman
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim
                     , hmatrix
